# drillx

./: .gitignore
drillx/: build.rs
drillx/cuda/: drillx.cu  drillx.h  test_hash.cu
drillx/src/: cuda.rs
examples/gpu-perf/: Cargo.toml
examples/gpu-perf/src/: main.rs
